--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<h1>SpaceX</h1>
 		<div class="dashboard-container">
 			<div class="dashboard-item omgeving">
-				<h3>Afstand over tijd in KM</h3>
+				<h3>Afstand</h3>
 				<div id="voertuig"></div>
 				 <script>
 	            google.charts.load('current', {'packages':['corechart']});
